@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1942 2003/12/24 10:21:33 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.1943 2003/12/24 13:10:47 walito Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-12-24 17:10 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
+  * contrib/mysql/Makefile
+    ! Minor fix
 
 2003-12-24 10:00 UTC-0300 Walter Negro <anegro@overnet.com.ar>
   * source/rtl/valtype.c
